<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.radioline.master.myapplication.BasketActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_clearbasket"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_clearBasket" />
    <item
        android:id="@+id/action_dispatch"
        android:icon="@drawable/ic_send"
        android:orderInCategory="400"
        android:showAsAction="always"
        android:title="@string/action_dispatch" />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="600"
        android:showAsAction="ifRoom"
        android:title="@string/action_refresh" />

</menu>
