<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.radioline.master.myapplication.DispatchActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDeliveryDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvDeliveryDate" />

            <DatePicker
                android:id="@+id/dpDeliveryDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvComments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvComments"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/etComments"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:ems="10"
                android:inputType="textMultiLine" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Switch
                        android:id="@+id/swCurrency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/swCurrency"
                        android:textOff="USD"
                        android:textOn="UAH" />

                    <TextView
                        android:id="@+id/tvSum"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:gravity="right"
                        android:text="9999"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="24dp" />
                </LinearLayout>

                <Button
                    android:id="@+id/btSendToServer"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btSendToServer" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
